// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. Render a Card 1`] = `
<Styled(View)>
  <CardContainer>
    <ImageContainer>
      <TimesImage
        aspectRatio={1.5}
        style={Object {}}
        uri="https://www.thetimes.co.uk/imageserver/image/methode%2Fsundaytimes%2Fprod%2Fweb%2Fbin%2F9242e576-4dfc-11e7-a20e-a11097d3353d.jpg?crop=1463%2C975%2C293%2C12&resize=360"
      />
    </ImageContainer>
    <ChildContainer>
      <span>
        A card
      </span>
    </ChildContainer>
  </CardContainer>
</Styled(View)>
`;

exports[`2. Render the loading state 1`] = `
<View>
  <Loading
    aspectRatio={1.5}
    childRatio={2.7}
    showImage={true}
  />
</View>
`;

exports[`3. Renders without an image 1`] = `
<Styled(View)>
  <CardContainer>
    <ChildContainer>
      <span>
        No image
      </span>
    </ChildContainer>
  </CardContainer>
</Styled(View)>
`;

exports[`4. Renders without an image URL 1`] = `
<Styled(View)>
  <CardContainer>
    <ChildContainer>
      <span>
        No URL
      </span>
    </ChildContainer>
  </CardContainer>
</Styled(View)>
`;

exports[`5. Re-renders after showing the loading state 1`] = `
<Styled(View)>
  <CardContainer>
    <ImageContainer>
      <TimesImage
        aspectRatio={1.5}
        style={Object {}}
        uri="https://www.thetimes.co.uk/imageserver/image/methode%2Fsundaytimes%2Fprod%2Fweb%2Fbin%2F9242e576-4dfc-11e7-a20e-a11097d3353d.jpg?crop=1463%2C975%2C293%2C12&resize=360"
      />
    </ImageContainer>
    <ChildContainer>
      <span>
        Re-render me
      </span>
    </ChildContainer>
  </CardContainer>
</Styled(View)>
`;

exports[`6. Renders Card normally and does not re-render 1`] = `
<Styled(View)>
  <CardContainer>
    <ImageContainer>
      <TimesImage
        aspectRatio={1.5}
        style={Object {}}
        uri="https://www.thetimes.co.uk/imageserver/image/methode%2Fsundaytimes%2Fprod%2Fweb%2Fbin%2F9242e576-4dfc-11e7-a20e-a11097d3353d.jpg?crop=1463%2C975%2C293%2C12&resize=360"
      />
    </ImageContainer>
    <ChildContainer>
      <span>
        Do not re-render me
      </span>
    </ChildContainer>
  </CardContainer>
</Styled(View)>
`;
